# This file is part of AXL (R) Library
# Tibbo Technology Inc (C) 2004-2013. All rights reserved
# Author: Vladimir Gladkov

#...............................................................................

if (DOXYGEN_FOUND AND DOXYREST_FOUND AND SPHINX_FOUND)
	add_subdirectory (manual)
endif ()

#...............................................................................
